clusters/holton-talos-prod/nashvillehomelab-com/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nashvillehomelab-com-gateway
  namespace: nashvillehomelab-com
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: nashvillehomelab.com
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: nashvillehomelab-com-cert
        kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
