clusters/holton-talos-prod/nashvillehomelab-com/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nashvillehomelab-com
  namespace: nashvillehomelab-com
spec:
  parentRefs:
  - name: nashvillehomelab-com-gateway
    namespace: nashvillehomelab-com
    sectionName: https
  hostnames:
  - nashvillehomelab.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nashvillehomelab-com
      port: 80
